Change API to https and partially complete documentation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/**Just added formatting for Hero Banner(probably can be done in index.html)**/
 .app-title {
     text-align: center;
     font-size:xx-large;
